tool박스 마음에 안드는 점 수정

--- a/src/hltml.html
+++ b/src/hltml.html
@@ -89,6 +89,7 @@ section#sys{
 }
 
 #loading{
+    padding-top: 0.5em;
     margin-right: 4px;
     opacity: 0;
 }
@@ -116,6 +117,7 @@ section#sys{
 .tools{
     color: var(--backgroundC);
     background-color: var(--elementC);
+    padding-top: 0.5em;
     margin-right: 4px;
     padding-left: 1em;
     padding-right: 1em;
