--- a/src/hltml.html
+++ b/src/hltml.html
@@ -48,6 +48,7 @@ section#sys{
     display: flex;
 }
 .insertChar{
+    border-bottom: 1px solid var(--elementC);
     position: relative;
     white-space: pre;
     color: var(--backgroundC);
