opencv부분 마이그레이션 완료. TODO: 설정 정보 가져오게 하기

--- a/src/hltml.html
+++ b/src/hltml.html
@@ -415,7 +415,7 @@ function canvCancel(e){
     nowStatus.drawActive = false;
     e.currentTarget.addEventListener("pointerdown", canvPD);
 
-    nowStatus.ctx = undefined;
+    //nowStatus.ctx = undefined;
     nowStatus.lastPointX = -1;
     nowStatus.lastPointY = -1;
 
@@ -446,12 +446,14 @@ function canvPM(e){
 }
 
 function canv2img(){
-    nowStatus.drwaEnable = false;
+    nowStatus.drawEnable = false;
     nowStatus.displayLoading();
     txtimg = nowStatus.nowCanv.toDataURL();
     console.log(txtimg);
+    let txtData = nowStatus.ctx.getImageData(0, 0, nowStatus.nowCanv.width, nowStatus.nowCanv.height);
 
     //TODO // 텍스트 처리 함수로 넘기기.
+    ssp_ocr(txtData)
 
     activeProcess = setTimeout(() => {changeText("test");}, 2000);
 }
@@ -472,7 +474,9 @@ function changeText(addtext){
 }
 
 function ssp_ocr(imgSource) {
-    let txtimg = cv.imread(imgSource, cv.IMREAD_UNCHANGED);
+    let chars = Array(); let charImgs = Array();
+
+    let txtimg = cv.matFromImageData(imgSource);
     let rgbaP = new cv.MatVector();
 
     cv.split(txtimg, rgbaP);
@@ -547,8 +551,6 @@ function ssp_ocr(imgSource) {
     }
     
     console.log(charImgs);
-
-    cv.imshow('canvasOutput', thImg);
 
     txtimg.delete(); rgbaP.delete(); alphaChannel.delete();
     thImg.delete(); cnt.delete(); hiec.delete();
