회전바 문제 수정

--- a/src/hltml.html
+++ b/src/hltml.html
@@ -122,7 +122,6 @@ section#sys{
     margin-right: 4px;
     padding-left: 1em;
     padding-right: 1em;
-    border: 1px solid ;
 }
 
 canvas{
@@ -287,7 +286,7 @@ class status{
 
 function setSsuekSsuek(text, line, col){
     if (nowStatus != undefined){
-        if (nowStatus.setLastTime != undefined){ clearTimeout(setLastTime); }
+        if (nowStatus.setLastTime != undefined){ clearTimeout(nowStatus.setLastTime); }
         delete nowStatus;
     }
     if (activeProcess != undefined){ clearTimeout(activeProcess); }
@@ -403,10 +402,10 @@ function canvPD(e){
     nowStatus.nowCanv = e.currentTarget;
     nowStatus.ctx = e.currentTarget.getContext("2d");
 
-    if (this.setLastTime != undefined){
-        clearTimeout(this.setLastTime);
+    if (nowStatus.setLastTime != undefined){
+        clearTimeout(nowStatus.setLastTime);
     }
-    this.setLastTime = undefined;
+    nowStatus.setLastTime = undefined;
 
     e.currentTarget.removeEventListener("pointerdown", canvPD);
 }
@@ -438,11 +437,11 @@ function canvPM(e){
     nowStatus.ctx.stroke();
 
     nowStatus.lastPointX = e.offsetX; nowStatus.lastPointY = e.offsetY; 
-    if (this.setLastTime != undefined){
-        clearTimeout(this.setLastTime);
+    if (nowStatus.setLastTime != undefined){
+        clearTimeout(nowStatus.setLastTime);
     }
     
-    this.setLastTime = setTimeout(canv2img, 2000);
+    nowStatus.setLastTime = setTimeout(canv2img, 2000);
 }
 
 function canv2img(){
